--- a/galleroid.css
+++ b/galleroid.css
@@ -2,7 +2,7 @@ body {
     background-color: lightcoral;
 }
 
-.galleroid {
+#galleroid {
 	display: flex;
 	align-items: center;
   	justify-content: center;
@@ -11,7 +11,7 @@ body {
   	margin: 0 auto 0;
 }
 
-.galleroid * {
+#galleroid * {
     box-sizing: border-box;
 }
 
@@ -28,23 +28,20 @@ body {
 }
 
 .galleroid-item {
+    width: 60vw;
+    margin: 20vw;
+    border-width: 5vw;
     background-color: white;
-    margin-top: 10vw;
-    border-width: 5vw 5vw 0;
     border-style: solid;
     border-color: white;
 	border-radius: 2px;
-    width: 60vw;
-    margin: 13vw;
 }
 
 .galleroid-item.active {
-    width: 89vw;
-    border-width: 2vw 2vw 0;
+    width: 96vw;
+    border-width: 2vw;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin: 2vw;
 }
 
 .galleroid-preview {
@@ -53,16 +50,16 @@ body {
 }
 
 .galleroid-picture-container {
-    width: 60vw;
-    height: 60vw;
+    width: 50vw;
+    height: 50vw;
     background-color: grey;
     border-radius: 2px;
     margin: auto;
 }
 
 .galleroid-picture-container.active {
-    width: 89vw;
-    height: 89vw;
+    width: 92vw;
+    height: 92vw;
     border-radius: 4px;
 }
 
@@ -70,7 +67,6 @@ body {
     display: none;
     object-fit: contain;
 	margin: auto;
-  	/*max-width: 100%;*/
   	width: 100%;
   	height: 100%;
     border-radius: 4px;
