--- a/galleroid.css
+++ b/galleroid.css
@@ -30,11 +30,18 @@ body {
 .galleroid-item {
     width: 60vw;
     margin: 20vw;
-    border-width: 5vw;
+    border-width: 5vw 5vw 0;
     background-color: white;
     border-style: solid;
     border-color: white;
-	border-radius: 2px;
+    border-radius: 2px;
+    display: grid;
+    grid-gap: 0px;
+    grid-template-columns: 0 auto 0;
+    grid-template-rows: auto 15vw auto;  
+    grid-template-areas: 'pic pic pic' 
+                         'prev title next' 
+                         'text text text'
 }
 
 .galleroid-item.active {
@@ -42,11 +49,8 @@ body {
     border-width: 2vw;
     border-radius: 4px;
     margin: 2vw;
-}
-
-.galleroid-preview {
-    display: block;
-    cursor: pointer;
+    grid-template-columns: 10vw auto 10vw;
+    grid-template-rows: auto auto auto;
 }
 
 .galleroid-picture-container {
@@ -54,7 +58,9 @@ body {
     height: 50vw;
     background-color: grey;
     border-radius: 2px;
-    margin: auto;
+    margin: 0;
+    cursor: pointer;
+    grid-area: pic;
 }
 
 .galleroid-picture-container.active {
@@ -87,16 +93,14 @@ body {
     overflow: hidden;
 	background-color: none;
 	text-align: center;
-	padding: 7vw;
 	max-width: 70vw;
 	text-align: center;
     margin: auto;
-    z-index: 1;
+    grid-area: title;
 }
 
 .galleroid-title.active {
     transform: scale(1.5);
-    padding: 5vw 5vw 2vw;
 }
 
 .galleroid-detail {
@@ -113,26 +117,43 @@ body {
     
 }
 
-.galleroid-buttons {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 12px;
-}
-
-.galleroid-buttons button {
+.galleroid-previous-button,
+.galleroid-next-button {
     width: 10vw;
     height: 10vw;
     border-radius: 4px;
     color: white;
     background-color: lightgrey;
     border: none;
-    z-index: 2;
+    display: none;
+    padding: 0;
+    margin: 0;
+}
+
+.galleroid-previous-button.active,
+.galleroid-next-button.active {
+    display: block;
+    margin: 2vw 0;
+
+}
+
+.galleroid-previous-button {
+    grid-area: prev;
+}
+
+.galleroid-next-button {
+    grid-area: next;
 }
 
 .galleroid-text-container {
+    display: none;
     width: 100%;
     height: 126px;
+    grid-area: text;
+}
+
+.galleroid-text-container.active {
+    display: block;
 }
 
 .galleroid-text {
