--- a/galleroid.css
+++ b/galleroid.css
@@ -20,13 +20,13 @@ body {
 .galleroid-item,
 .galleroid-picture-container,
 .galleroid-title {
-    transition: all 0.2s ease-in;
+    transition: all 0.8s ease-in;
 }
 
 .galleroid-item.active,
 .galleroid-picture-container.active,
 .galleroid-title.active {
-    transition: all 0.25s ease-out;
+    transition: all 1s ease-out;
 }
 
 .galleroid-item {
@@ -39,20 +39,25 @@ body {
     border-radius: 2px;
     display: grid;
     grid-gap: 0px;
-    grid-template-columns: 0 auto 0;
-    grid-template-rows: auto 15vw auto;  
-    grid-template-areas: 'pic pic pic' 
-                         'prev title next' 
-                         'text text text'
+    grid-template-columns:  0       auto    0;
+    grid-template-rows:     auto
+                            15vw 
+                            auto;  
+    grid-template-areas: '  pic     pic     pic' 
+                         '  prev    title   next' 
+                         '  text    text    text'
 }
 
 .galleroid-item.active {
     width: 96vw;
+    /*height: calc(100vh - 4vw);*/
     border-width: 2vw;
     border-radius: 4px;
     margin: 2vw 2vw 0;
-    grid-template-columns: 10vw auto 10vw;
-    grid-template-rows: auto auto auto;
+    grid-template-columns:  10vw    auto    10vw;
+    grid-template-rows:     auto
+                            auto
+                            auto;
 }
 
 .galleroid-picture-container {
@@ -67,7 +72,7 @@ body {
 
 .galleroid-picture-container.active {
     width: 92vw;
-    height: 92vw;
+    height: calc(100vh - 22vw - 126px);
     border-radius: 4px;
 }
 
@@ -165,7 +170,9 @@ body {
         width: 30vw;
         margin: 10vw;
         border-width: 2.5vw 2.5vw 0;
-        grid-template-rows: auto 7.5vw auto;
+        grid-template-rows: auto
+                            7.5vw
+                            auto;
     }
 
     
@@ -188,7 +195,9 @@ body {
         width: 15vw;
         margin: 5vw;
         border-width: 1.25vw 1.25vw 0;
-        grid-template-rows: auto 3.75vw auto;
+        grid-template-rows: auto
+                            3.75vw
+                            auto;
     }
 
     
