--- a/galleroid.css
+++ b/galleroid.css
@@ -18,13 +18,11 @@ body {
 }
 
 .galleroid-item,
-.galleroid-picture-container,
 .galleroid-title {
     transition: all 0.2s ease-in;
 }
 
 .galleroid-item.active,
-.galleroid-picture-container.active,
 .galleroid-title.active {
     transition: all 0.25s ease-out;
 }
@@ -36,7 +34,7 @@ body {
 }
 
 .galleroid-item {
-    width: 60vw;
+    width: 60%;
     margin: 20vw 20vw 0;
     border-width: 5vw 5vw 0;
     background-color: white;
@@ -71,20 +69,22 @@ body {
 }
 
 .galleroid-picture-container {
-    width: 50vw;
+    width: 100%;
     height: 50vw;
     background-color: grey;
     border-radius: 2px;
-    margin: 0;
+    margin: 0 auto;
     cursor: pointer;
     grid-area: pic;
+    transition: height 0.2s ease-in;
 }
 
 .galleroid-picture-container.active {
-    width: 89vw;
     height: calc(100vh - 22vw - 126px);
     border-radius: 4px;
     margin: 0 auto;
+    transition: height 0.25s ease-out;
+}
 }
 
 .galleroid-picture {
@@ -198,7 +198,6 @@ body {
     }
 
     .galleroid-picture-container {
-        width: 25vw;
         height: 25vw;
     }
 
@@ -237,12 +236,10 @@ body {
     }
 
     .galleroid-picture-container {
-        width: 12.5vw;
         height: 12.5vw;
     }
 
     .galleroid-picture-container.active {
-        width: 96vw;
         height: calc(100vh - 11vw - 54px);
     }
 
