--- a/galleroid.css
+++ b/galleroid.css
@@ -55,6 +55,7 @@ body {
     position: relative;
     padding: 0;
     z-index: 1;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .galleroid-item.active {
@@ -66,6 +67,7 @@ body {
                             auto
                             auto;
     z-index: 10;
+    box-shadow: 0 1vw 4vw 0 rgba(0, 0, 0, 0.5);
 }
 
 .galleroid-picture-container {
