--- a/galleroid.css
+++ b/galleroid.css
@@ -8,7 +8,6 @@ body {
 	display: flex;
   	justify-content: space-around;
     flex-flow: row wrap;
-    flex-basis: auto;  
   	width: 100%;
     margin: 0 auto 0;
 }
@@ -180,21 +179,20 @@ body {
     width: 100%;
     height: 126px;
     grid-area: text;
+    position: relative;
+    overflow: hidden;
 }
 
 .galleroid-text-container.active {
     display: block;
-    position: absolute;
 }
 
 .galleroid-text {
     text-align: center;
-    margin: 0;
+    margin: auto;
     overflow: hidden;
     white-space: normal;
-    position: relative;
-    top: 0;
-    transform: translateY(-50%);
+    position: absolute;
     max-height: 126px;
 }
 
